k8s-manisfest/wordpress-app/web/manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-web
  namespace: wordpress
  labels:
    app: wordpress-web
    tier: frontend
spec:
  selector:
    matchLabels:
      app: wordpress-web
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-web
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress-web
        volumeMounts:
        - name: wordpress-web-pvc
          mountPath: "/var/www/html"          
      volumes:
      - name: wordpress-web-pvc
        persistentVolumeClaim:
          claimName: wordpress-web-pvc
