k8s-manisfest/wordpress-app/web/manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-web
  namespace: wordpress
  labels:                
    app: wordpress-web
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress-web
    tier: frontend
